# wow

./: .gitignore  docker-compose.yml  workspace.code-workspace
apps/journal-app/: .pnp.cjs  package.json
apps/mplus-app/: .pnp.cjs  package.json
apps/mplus-leaderboard/: package.json  vite.config.ts
apps/mplus-leaderboard/src/: index.css
apps/mplus-leaderboard/src/app/: App.tsx
apps/mplus-leaderboard/src/components/Layout/: Layout.tsx
apps/old-mplus/: tailwind.config.cjs
apps/old-mplus/src/app/Home/: Home.tsx
apps/old-mplus/src/app/NotFound/: NotFound.tsx
apps/wow-app/: package.json
apps/wow-app/conf/conf.d/: default.conf
apps/wow-app/src/api/: dungeon-leaderboard-schema.ts  realm-search-schema.ts
apps/wow-app/src/api/data/: connected-realm.json
apps/wow-app/src/app/Home/: Home.tsx
apps/wow-app/src/components/Layout/: Layout.tsx
data/wow-workflows/: config.py  nb_clean.ipynb  nb_explore.ipynb  pyproject.toml
data/wow-workflows/scratch/: blizz_api.py  leaderboards.py  model.py  scratch.py
docs/: blizz-api.md  notes.md  workflow.md
docs/api-responses/: connected-realm-leaderboard.json  connected-realm-mythic-leaderboards.json  connected-realm-search.json
docs/go-types/: connectedRealm.go  connectedRealmLeaderboard.go  connectedRealmMythicLeaderboards.go  connectedRealmSearch.go
lib/wow-db-schema/: pyproject.toml
lib/wow-db-schema/wow_db/: schema.py
services/mplus-svc/: .gitignore  Dockerfile  README.md  api.py  config.py  pyproject.toml  sample.env
services/mplus-svc/mplus_svc/: __init__.py
services/mplus-svc/mplus_svc/api/routers/: leaderboards.py
services/wow-api/: .gitignore  Dockerfile  api_nb.ipynb  gen.py  key_models.py  leaderboards.py  nb.ipynb  oce_leaderboards.py  pyproject.toml  pyrightconfig.json  scratch.py
services/wow-api/data/: character-runs.json  class-res.json  key-leaderboard.json  leaderboard-realm.json  media-res.json  proudmoore.json  race-res.json  realms.json  spec-res.json  talents-res.json
services/wow-api/scripts/: gen.py
services/wow-api/scripts/in/: raw-connected-realms.json  raw.json
services/wow-api/wow_api/api/routes/: wow.py
services/wow-api/wow_api/domain/: models.py
workflows/wow-workflows/: pyproject.toml
wow-api/: README.md  api.py  config.py  nb.ipynb  sample.env
wow-api/data/: proudmoore.json
wow-api/data/dungeons/: proudmoore-tjs-894.json
wow-api/data/leaderboards/: proudmooore-leaderboards.json
wow-api/wow_api/: __init__.py
wow-api/wow_api/api/routes/: wow.py
wow-app/: Dockerfile  index.html  package.json
wow-app/src/: main.tsx
wow-app/src/app/Home/: Home.tsx
wow-app/src/components/Layout/: Layout.tsx
