[tool.poetry]
name = "wow-api"
version = "0.1.0"
description = ""
authors = ["Victor Tantillo <v.tantillo3@gmail.com>"]
readme = "README.md"
packages = [{include = "wow_api"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.1"
fastapi = {extras = ["all"], version = "^0.92.0"}
databases = {extras = ["asycpg"], version = "^0.7.0"}
psycopg2 = "^2.9.5"
pyhumps = "^3.8.0"
ulid-py = "^1.1.0"
arrow = "^1.2.3"
requests = "^2.28.2"
requests-toolbelt = "^0.10.1"
pandas = "^1.5.3"
polars = "^0.16.6"
pyjanitor = "^0.24.0"
requests-oauthlib = "^1.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
